--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"node src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,3 +15,4 @@
     "postman-request": "^2.88.1-postman.30"
   }
 }
+ 
